TRekt_3D/Debug/TRekt_3D.log
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.Cpp.props(31,3): warning MSB4011: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.Makefile.props" cannot be imported again. It was already imported at "C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.cpp.props (31,3)". This is most likely a build authoring error. This subsequent import will be ignored. [D:\Github\TRekt_3D\TRekt_3D\TRekt_3D.vcxproj]
  dsp.c
  arm-none-eabi-gcc -MMD -MP -MF /d/Github/TRekt_3D/TRekt_3D/build/dsp.d -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/d/Github/TRekt_3D/TRekt_3D/include -I/c/devkitPro/libctru/include -I/c/devkitPro/portlibs/armv6k/include -I/c/devkitPro/portlibs/3ds/include -I/d/Github/TRekt_3D/TRekt_3D/build -DARM11 -D_3DS -c /d/Github/TRekt_3D/TRekt_3D/source/dsp.c -o dsp.o 
  d:/Github/TRekt_3D/TRekt_3D/source/dsp.c: In function 'dumpCode':
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(254,17): warning G14B797B8: implicit declaration of function 'memmem'; did you mean 'memset'? [-Wimplicit-function-declaration]
    dsp_loc = (u8*)memmem(decompressedBuffer , decompressedSize, magic, 4);
                   ^~~~~~
                   memset
  d:/Github/TRekt_3D/TRekt_3D/source/dsp.c: In function 'ensureDSP':
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(287,12): error G1779FE23: invalid initializer
    FILE fh = fopen("sdmc:/3ds/dspfirm.cdc", "rb");
              ^~~~~
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(288,9): error GC5023B0E: invalid operands to binary != (have 'FILE {aka struct __sFILE}' and 'void *')
    if (fh != NULL) {
           ^~
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(289,10): error G1CC0E50E: incompatible type for argument 1 of 'fclose'
     fclose(fh);
            ^~
  In file included from c:\devkitpro\devkitarm\arm-none-eabi\include\sys\lock.h:4:0,
                   from c:/devkitPro/libctru/include/3ds/synchronization.h:6,
                   from c:/devkitPro/libctru/include/3ds.h:19,
                   from d:/Github/TRekt_3D/TRekt_3D/source/dsp.c:15:
  c:\devkitpro\devkitarm\arm-none-eabi\include\stdio.h:191:5: note: expected 'FILE * {aka struct __sFILE *}' but argument is of type 'FILE {aka struct __sFILE}'
   int _EXFUN(fclose, (FILE *));
       ^
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(293,6): error GCDCAB7C7: 'i' undeclared (first use in this function)
    for(i = 0; i < NB_TITLES; ++i){
        ^
  d:/Github/TRekt_3D/TRekt_3D/source/dsp.c:293:6: note: each undeclared identifier is reported only once for each function it appears in
d:/Github/TRekt_3D/TRekt_3D/source/dsp.c(297,7): warning G14B797B8: implicit declaration of function 'R_SUCCESS'; did you mean 'R_SUCCEEDED'? [-Wimplicit-function-declaration]
     if (R_SUCCESS(res)) {
         ^~~~~~~~~
         R_SUCCEEDED
  make[1]: *** [dsp.o] Error 1
  make: *** [build] Error 2
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(41,5): error MSB3073: The command "make" exited with code 2.
